Finishing implementation; support Postgres
